apps/production/pgadmin/ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ts-pgadmin-ingress
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: pgadmin-service
#       port:
#         number: 15432
#   tls:
#     - hosts:
#         - pgadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin.boxadvisers.com
    http:
      paths:
      - backend:
          service:
            name: pgadmin-service
            port:
              number: 15432
        path: /
        pathType: Prefix
